Fix scroll overflow issue with virtual console

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
 #console {
 	position: absolute;
+	overflow: auto;
 	bottom: 0;
 	left: 0;
 	right: 0;
